--- a/Expensy.Logic/Expensy.Logic.csproj
+++ b/Expensy.Logic/Expensy.Logic.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Expensy.Data\Expensy.Data.csproj" />
+  </ItemGroup>
+
 </Project>
