--- a/Expensy/Expensy.csproj
+++ b/Expensy/Expensy.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Expensy.Data\Expensy.Data.csproj" />
+    <ProjectReference Include="..\Expensy.Logic\Expensy.Logic.csproj" />
   </ItemGroup>
 
 </Project>
